--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Azizbek 4:0 hisob.</h1>
+    <h1>Azizbek uzur 4:0 hisob bo'ldi.</h1>
+    <h2>Abdullajon biza real bilan o'ynayotganimizni hech kim aytmabdi. shu uchun 4:0 ga xo'rladik.</h2>
 </body>
 </html>
